# data

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/actions/setup-python-environment/: action.yml
.github/workflows/: build.yml  publish-data.yml
docs/: .gitignore  complexity.md  how-to-guides.md  index.md  overview.md  pipelines.md  reference.md
docs/architecture/: overview.md
docs/assets/: custom.css
docs/assets/fonts/: denim-ink.css
docs/datasets/: index.md  overview.md
docs/process/: publishing.md
docs/reference/: processing.md  scripts.md  utilities.md
hooks/: copy_pipeline_files.py
scripts/: publish-data.py
